tests/baselines/reference/superCallsInConstructor.errors.txt
==== tests/cases/compiler/superCallsInConstructor.ts (1 errors) ====
    class C {
        foo() {}
        bar() {}
    }
    
    class Base {
        x: string;
    }
     
    class Derived extends Base {
        constructor() {
            with(new C()) {
                 ~~~~~~~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
                foo();
                super();
                bar();
            }
    
            try {} catch(e) { super(); }
        }
    }